--- a/src/index.css
+++ b/src/index.css
@@ -6,11 +6,11 @@
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
-
+/* 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  -moz-osx-font-smoothing: grayscale; */
 }
 
 @import "tailwindcss";
@@ -21,13 +21,13 @@
 
 body {
   margin: 0;
-  padding: 0;
+  /* padding: 0; */
 
   
   min-height: 100vh;
   background-image: url(./assets/pic4.jpg);
-  /* height: 100dvh;
-  width: 100dvw; */
+  /* height: 100dvh; */
+  width: 100%;
   background-size: cover;
   color: red;
 }
@@ -314,7 +314,7 @@ header {
   font-weight: 300;
   line-height: 22px;
 } */
-::-webkit-scrollbar{
+/* ::-webkit-scrollbar{
   width: 15px;
 }
 ::-webkit-scrollbar-thumb{
@@ -323,7 +323,7 @@ header {
 ::-webkit-scrollbar-track{
   background-color: var(--snd-bg-color);
   width: 50px;
-}
+} */
 
 
 @media(max-width: 991px){
